# stocks-news-crawler

./: .gitignore  README.md  TODO.md  main.py  model.py  pyproject.toml
analysts/: prompt.py
crawlers/: google_crawler.py  zack_crawler.py
google-crawler/: google_crawler.py
link_parsers/: newspaper_parser.py
parsers/: newspaper_parser.py
utils/: persistence.py
zacks-crawler/: zack_crawler.py
