[tool.poetry]
name = "stock-catalyst-news-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"
packages = [{include = "stock_catalyst_news_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
newspaper4k = "^0.9.2"
bs4 = "^0.0.2"
requests = "^2.32.0"
mechanicalsoup = "^1.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
aiosqlite = "^0.20.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
